--- a/ClinicaPOO/ClinicaPOO/Properties/Resources.resx
+++ b/ClinicaPOO/ClinicaPOO/Properties/Resources.resx
@@ -121,7 +121,22 @@
   <data name="Welcome to the clinic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Welcome to the clinic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user 11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user 11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key (1) 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\key (1) 1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Login" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user 1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="clinica-dental 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clinica-dental 1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
